--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
     margin-left: 185px;
     border-radius: 9px;
     font-size: 20px;
-    background: whitesmoke url("icons/leftarrow.png") no-repeat 12px;
+    background: blue url("icons/leftarrow.png") no-repeat 12px;
 }
 
 .playPicture {
